# GestureRecognition

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: gesture_config.yaml
config/rviz/: default.rviz  robot_visualization.rviz
launch/: basic_system.launch.py  gesture_control.launch.py
surgical_gesture_control/: __init__.py
surgical_gesture_control/launch/: basic_system.launch.py
surgical_gesture_control/msg/: GestureDetection.msg
surgical_gesture_control/nodes/: __init__.py  gesture_classifier_node.py  gesture_control_node.py  robot_node.py  vision_node.py
surgical_gesture_control/utils/: __init__.py  motion_filter.py  simple_gestures.py  smoothing.py
